--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {
-    "node-sass": "^4.14.1"
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "slick-carousel": "^1.8.1"
   }
 }
