--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/polyfill": "^7.11.5",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "slick-carousel": "^1.8.1"
