--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/vasilisach/pick-home#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-util": "^3.0.8",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "imagemin-pngquant": "^9.0.1"
   },
   "dependencies": {
     "@babel/core": "^7.11.6",
